--- a/source/ui-kit.html
+++ b/source/ui-kit.html
@@ -15,7 +15,78 @@
 
 <body>
   <div class="container">
-
+    <h1>UI kit</h1>
+    <h2>Кнопки</h2>
+    <button type="button" class="button button--blue">Кнопка</button>
+    <a href="#" class="button button--light-blue">
+      <span>ПОСМОТРЕТЬ ВСЕ</span>
+      <svg width="33" height="12" viewBox="0 0 33 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <use xlink:href="img/sprite.svg#icon-arrow"></use>
+      </svg>
+    </a>
+    <button type="button" class="button button--white">Кнопка</button>
+    <button type="submit" class="button button--grey">ПРОГОЛОСОВАТЬ против всех</button>
+    <h2>Ссылки</h2>
+    <a href="#" class="link-arrow">
+      <span>Перейти</span>
+      <svg width="33" height="12" viewBox="0 0 33 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <use xlink:href="img/sprite.svg#icon-arrow"></use>
+      </svg>
+    </a>
+    <a href="#" class="link-arrow link-arrow--small">
+      <span>Перейти к опросу</span>
+      <svg width="33" height="12" viewBox="0 0 33 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <use xlink:href="img/sprite.svg#icon-arrow"></use>
+      </svg>
+    </a>
+    <a href="#" class="link-arrow link-arrow--grey">
+      <span>Архив опросов</span>
+      <svg width="33" height="12" viewBox="0 0 33 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <use xlink:href="img/sprite.svg#icon-arrow"></use>
+      </svg>
+    </a>
+    <h2>Форма</h2>
+    <form action="#" class="form">
+      <div class="form-checkbox">
+        <input class="visually-hidden" type="checkbox" name="checkbox" id="checkbox" value="checkbox">
+        <label for="checkbox">Я чекбокс</label>
+      </div>
+      <div class="form-checkbox">
+        <input class="visually-hidden" type="checkbox" name="checkbox-2" id="checkbox-2" value="checkbox-2" disabled>
+        <label for="checkbox-2">Я чекбокс</label>
+      </div>
+      <div class="form-radio">
+        <input class="visually-hidden" type="radio" name="radio" id="radio-1" value="radio-1">
+        <label for="radio-1">Я радиобаттон</label>
+      </div>
+      <div class="form-radio">
+        <input class="visually-hidden" type="radio" name="radio" id="radio-2" value="radio-2">
+        <label for="radio-2">Я радиобаттон</label>
+      </div>
+      <div class="form-radio">
+        <input class="visually-hidden" type="radio" name="radio" id="radio-3" value="radio-3" disabled>
+        <label for="radio-3">Я радиобаттон</label>
+      </div>
+    </form>
+    <h2>Пагинация</h2>
+    <div class="paginator">
+      <a class="paginator__item paginator__item--prev paginator__item--disabled" aria-label="предыдущий">
+          <svg width="18" height="10" viewBox="0 0 18 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <use xlink:href="img/sprite.svg#icon-paginator-prev"></use>
+        </svg>
+      </a>
+      <a class="paginator__item paginator__item--current">1</a>
+      <a class="paginator__item" href="#1">2</a>
+      <a class="paginator__item" href="#1">3</a>
+      <a class="paginator__item" href="#">&hellip;</a>
+      <a class="paginator__item" href="#14">9</a>
+      <a class="paginator__item" href="#16">10</a>
+      <a class="paginator__item" href="#17">11</a>
+      <a class="paginator__item paginator__item--next" href="#next" aria-label="следующий">
+        <svg width="18" height="10" viewBox="0 0 18 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <use xlink:href="img/sprite.svg#icon-paginator-next"></use>
+        </svg>
+      </a>
   </div>
 
 <script src="js/plugins/script.min.js"></script>
