--- a/source/ui-kit.html
+++ b/source/ui-kit.html
@@ -26,6 +26,18 @@
     </a>
     <button type="button" class="button button--white">Кнопка</button>
     <button type="submit" class="button button--grey">ПРОГОЛОСОВАТЬ против всех</button>
+    <button type="button" class="button-star">
+      <span class="visually-hidden">Добавить в избранное</span>
+      <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <use xlink:href="img/sprite.svg#icon-star"></use>
+      </svg>
+    </button>
+    <button type="button" class="button-star button-star--active">
+      <span class="visually-hidden">Добавить в избранное</span>
+      <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <use xlink:href="img/sprite.svg#icon-star"></use>
+      </svg>
+    </button>
     <h2>Ссылки</h2>
     <a href="#" class="link-arrow">
       <span>Перейти</span>
@@ -56,7 +68,7 @@
         <label for="checkbox-2">Я чекбокс</label>
       </div>
       <div class="form-radio">
-        <input class="visually-hidden" type="radio" name="radio" id="radio-1" value="radio-1">
+        <input class="visually-hidden" type="radio" name="radio" id="radio-1" value="radio-1" checked>
         <label for="radio-1">Я радиобаттон</label>
       </div>
       <div class="form-radio">
@@ -76,12 +88,12 @@
         </svg>
       </a>
       <a class="paginator__item paginator__item--current">1</a>
-      <a class="paginator__item" href="#1">2</a>
-      <a class="paginator__item" href="#1">3</a>
+      <a class="paginator__item" href="#2">2</a>
+      <a class="paginator__item" href="#3">3</a>
       <a class="paginator__item" href="#">&hellip;</a>
-      <a class="paginator__item" href="#14">9</a>
-      <a class="paginator__item" href="#16">10</a>
-      <a class="paginator__item" href="#17">11</a>
+      <a class="paginator__item" href="#9">9</a>
+      <a class="paginator__item" href="#10">10</a>
+      <a class="paginator__item" href="#11">11</a>
       <a class="paginator__item paginator__item--next" href="#next" aria-label="следующий">
         <svg width="18" height="10" viewBox="0 0 18 10" fill="none" xmlns="http://www.w3.org/2000/svg">
           <use xlink:href="img/sprite.svg#icon-paginator-next"></use>
