Правит подключение js-модулей

--- a/source/ui-kit.html
+++ b/source/ui-kit.html
@@ -111,6 +111,6 @@
   </div>
 
 <script src="js/libs.js"></script>
-<script src="js/script.min.js"></script>
+<script src="js/main.min.js"></script>
 </body>
 </html>
