--- a/source/main.html
+++ b/source/main.html
@@ -108,6 +108,6 @@
   </header>
 
 <script src="js/libs.js"></script>
-<script src="js/script.min.js"></script>
+<script src="js/main.min.js"></script>
 </body>
 </html>
