Добавляет скрипты открытия основного меню

--- a/source/main.html
+++ b/source/main.html
@@ -22,7 +22,7 @@
   <title>Общественное голосование</title>
 </head>
 
-<body>
+<body class="page-body">
   <header class="page-header">
     <div class="page-header__bar">
       <div class="page-header__container  container">
@@ -41,6 +41,7 @@
 
         <button class="page-header__menu-btn  menu-btn" type="button">
           <span class="visually-hidden">Открыть меню</span>
+          <span class="menu-btn__icon"></span>
         </button>
       </div>
     </div>
