Добавляет скрипты открытия меню пользователя

--- a/source/main.html
+++ b/source/main.html
@@ -76,6 +76,8 @@
         </div>
 
         <div class="page-header__user-menu  user-menu">
+          <div class="user-menu__overlay"></div>
+
           <button class="user-menu__dropdown-toggle" type="button">
             <span class="visually-hidden">Открыть меню</span>
 
