add begin of main page

--- a/source/index.html
+++ b/source/index.html
@@ -29,6 +29,9 @@
       <li>
         <a href="ui-kit.html" target="_blank">UI kit</a>
       </li>
+      <li>
+        <a href="main-page.html" target="_blank">Main page</a>
+      </li>
     </ul>
   </div>
 
