--- a/source/main.html
+++ b/source/main.html
@@ -26,13 +26,13 @@
   <header class="page-header">
     <div class="page-header__bar">
       <div class="page-header__container  container">
-        <a class="page-header__roi-link" href="#">
+        <a class="logo-link" href="#">
           <img class="page-header__roi-logo" width="180" height="56" src="img/roi-logo.png" alt="Российская общественная инициатива">
         </a>
 
-        <a class="page-header__cite-name" href="#">Общественное голосование</a>
+        <a class="page-header__link  page-header__site-name" href="#">Общественное голосование</a>
 
-        <a class="page-header__visually-impaired  page-header__visually-impaired--bar" href="#">
+        <a class="page-header__link  page-header__version-btn  page-header__version-btn--bar" href="#">
           <svg width="18" height="18">
             <use xlink:href="img/sprite.svg#icon-glasses"></use>
           </svg>
@@ -46,8 +46,8 @@
       </div>
     </div>
 
-    <div class="page-header__main">
-      <div class="page-header__container  page-header__container--main  container">
+    <div class="page-header__main-menu  main-menu">
+      <div class="page-header__container  page-header__container--menu  main-menu__container  container">
         <div class="page-header__location-switcher  location-switcher">
           <p class="visually-hidden">Выберите регион голосования:</p>
 
@@ -55,20 +55,20 @@
             <div class="location-switcher__btn  form-radio">
               <input id="location-residence" class="visually-hidden" type="radio" name="location" value="residence" checked>
               <label for="location-residence">Адрес проживания</label>
-              <span class="location-switcher__address  location-switcher__address--residence">Городской округ рабочий поселок Новогуровский</span>
+              <span class="page-header__location-address  location-switcher__address">Городской округ рабочий поселок Новогуровский</span>
             </div>
 
             <div class="location-switcher__btn  form-radio">
               <input id="location-registration" class="visually-hidden" type="radio" name="location" value="registration">
               <label for="location-registration">Адрес регистрации</label>
-              <span class="location-switcher__address  location-switcher__address--registration">Краснобродский городской округ</span>
+              <span class="page-header__location-address  location-switcher__address">Краснобродский городской округ</span>
             </div>
 
             <button class="location-switcher__show-btn  button  button--blue" type="submit">Показать</button>
           </form>
         </div>
 
-        <a class="page-header__visually-impaired  page-header__visually-impaired--main" href="#">
+        <a class="page-header__link  page-header__version-btn  page-header__version-btn--menu" href="#">
           <svg width="18" height="18">
             <use xlink:href="img/sprite.svg#icon-glasses"></use>
           </svg>
@@ -78,10 +78,10 @@
         <div class="page-header__user-menu  user-menu">
           <div class="user-menu__overlay"></div>
 
-          <button class="user-menu__dropdown-toggle" type="button">
+          <button class="user-menu__dropdown-btn" type="button">
             <span class="visually-hidden">Открыть меню</span>
 
-            <svg class="user-menu__user-icon" width="12" height="16">
+            <svg class="user-menu__user-icon" width="16" height="16">
               <use xlink:href="img/sprite.svg#icon-user"></use>
             </svg>
 
@@ -94,15 +94,15 @@
 
           <ul class="user-menu__list">
             <li class="user-menu__item">
-              <a class="user-menu__link" href="#">Избранное</a>
+              <a class="page-header__link  user-menu__link" href="#">Избранное</a>
             </li>
 
             <li class="user-menu__item">
-              <a class="user-menu__link" href="#">Моя активность</a>
+              <a class="page-header__link  user-menu__link" href="#">Моя активность</a>
             </li>
 
             <li class="user-menu__item">
-              <a class="user-menu__link" href="#">Выход</a>
+              <a class="page-header__link  user-menu__link" href="#">Выход</a>
             </li>
           </ul>
         </div>
@@ -111,6 +111,9 @@
   </header>
 
   <main>
+    Для тестирования шапки при скролле
+    <br>
+    <br>
     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
