Добавляет правки, сборку с gulp 4

--- a/source/composite-poll.html
+++ b/source/composite-poll.html
@@ -1,26 +1,4 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="format-detection" content="telephone=no">
-
-  <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
-  <link rel="manifest" href="favicon/site.webmanifest">
-  <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5">
-  <meta name="msapplication-TileColor" content="#da532c">
-  <meta name="theme-color" content="#ffffff">
-
-  <link rel="preload" href="fonts/Rubik-Light.woff2" as="font" crossorigin="anonymous">
-  <link rel="preload" href="fonts/Rubik-Regular.woff2" as="font" crossorigin="anonymous">
-  <link rel="preload" href="fonts/Rubik-Medium.woff2" as="font" crossorigin="anonymous">
-  <link rel="preload" href="fonts/Rubik-Bold.woff2" as="font" crossorigin="anonymous">
-  <link href="css/style.min.css" rel="stylesheet">
-  <title>Общественное голосование</title>
-</head>
+<include src="source/components/head.html"></include>
 
 <body>
   <header></header>
@@ -35,11 +13,11 @@
     </div>
     <section class="composite-poll">
       <div class="container">
-        <h1 class="page-title">Опрос о состоянии инвестиционного и&nbsp;предпринимательского климата в Тульской области для&nbsp;представителей средних предприятий</h1>
+        <h1 class="composite-poll__title page-title">Опрос о состоянии инвестиционного и&nbsp;предпринимательского климата в Тульской области для&nbsp;представителей средних предприятий</h1>
         <p class="composite-poll__date">
           Дата окончания опроса: <b>25.11.2019</b>
         </p>
-        <p class="composite-poll__description">Здесь будет описание опроса (информация из стандартного поля). Рыбным текстом называется текст для временного наполнения макета в публикациях или производстве веб-сайтов, пока финальный текст еще не создан. Рыбный текст известен как текст-заполнитель.</p>
+        <p class="composite-poll__description">Здесь будет описание опроса (информация из стандартного поля). Рыбным текстом называется текст для временного наполнения макета в&nbsp;публикациях или производстве веб-сайтов, пока финальный текст еще не создан. Рыбный текст известен как текст-заполнитель.</p>
         <form action="#" class="form">
           <div class="form__section">
             <p class="form__question">Удовлетворены ли Вы качеством предоставления государственных и муниципальных услуг в настоящее время?</p>
@@ -70,7 +48,7 @@
             </div>
           </div>
           <div class="form__section">
-            <p class="form__question">О каких способах взаимодействия с органами власти Вам известно?</p>
+            <p class="form__question">О каких способах взаимодействия с&nbsp;органами власти Вам известно?</p>
             <p class="form__description">Выберите один или несколько вариантов ответа</p>
             <div class="form-checkbox">
               <input class="visually-hidden" type="checkbox" name="interaction-1" id="interaction-1" value="Личный прием должностного лица">
@@ -103,7 +81,21 @@
           </div>
           <div class="form__section">
             <p class="form__question">Оцените качество получения государственных и муниципальных услуг</p>
-            <input type="range" name="range" value="" />
+            <div class="form__range-wrapper form-range">
+              <div class="form-range__value">
+                <span>1</span>
+                <span>5</span>
+                <span>10</span>
+              </div>
+              <div class="form-range__track">
+                <div class="form-range__fill"></div>
+                <button type="button" class="form-range__button"></button>
+              </div>
+              <div class="form-range__description">
+                <span>очень плохо</span>
+                <span>очень хорошо</span>
+              </div>
+            </div>
           </div>
           <div class="form__section">
             <p class="form__question">Обращались ли в течение последнего года в орган государственной власти для получения государственных (муниципальных) услуг?</p>
@@ -117,7 +109,7 @@
               <label for="appeal-no">Нет</label>
             </div>
           </div>
-          <div class="form__section">
+          <div class="form__section form__section--padding-min">
             <p class="form__question">Сколько составило время ожидания?</p>
             <p class="form__description">Выберите один вариант ответа</p>
             <div class="form-radio">
@@ -138,7 +130,7 @@
             </div>
           </div>
           <div class="form__section">
-            <p class="form__question">Знаете ли Вы о программах, реализуемых органами государственной и муниципальной власти, направленных на формирование кадрового резерва?</p>
+            <p class="form__question">Знаете ли Вы о программах, реализуемых органами государственной и муниципальной власти, направленных на формирование кадрового&nbsp;резерва?</p>
             <p class="form__description">Выберите один вариант ответа</p>
             <div class="form-radio">
               <input class="visually-hidden" type="radio" name="reserve" id="reserve-yes" value="Да, знаю точно" checked>
@@ -153,7 +145,7 @@
               <label for="reserve-no">Нет</label>
             </div>
           </div>
-          <div class="form__section">
+          <div class="form__section form__section--padding-min">
             <p class="form__question">О каких способах взаимодействия с органами власти Вам известно?</p>
             <p class="form__description">Выберите один или несколько вариантов ответа</p>
             <div class="form-checkbox">
@@ -161,7 +153,11 @@
               <label for="social-1">Служащий</label>
             </div>
             <div class="form-checkbox">
-              <input class="visually-hidden" type="checkbox" name="social-2" id="social-2" value="Рабочий" checked>
+              <input class="visually-hidden" type="checkbox" name="social-1-2" id="social-1-2" value="Государственный, муниципальный служащий" checked>
+              <label for="social-1-2">Государственный, муниципальный служащий</label>
+            </div>
+            <div class="form-checkbox">
+              <input class="visually-hidden" type="checkbox" name="social-2" id="social-2" value="Рабочий">
               <label for="social-2">Рабочий</label>
             </div>
             <div class="form-checkbox">
@@ -189,9 +185,9 @@
               <label for="social-8">Другое</label>
             </div>
           </div>
-          <div class="form__button-wrapper">
-            <button type="submit" class="button button--blue">ОТПРАВИТЬ</button>
-            <a href="#" class="button button--light-blue">
+          <div class="form__button-wrapper form__button-wrapper--composite-poll">
+            <button type="submit" class="button button--blue form__submit form__submit--composite-poll">ОТПРАВИТЬ</button>
+            <a href="#" class="button button--light-blue form__btn form__btn--composite-poll">
               вернуться ко всем опросам
             </a>
           </div>
@@ -201,45 +197,4 @@
 
   </main>
 
-  <footer class="page-footer">
-    <div class="container">
-      <div class="page-footer__top">
-        <ul class="page-footer__list">
-          <li class="page-footer__item">
-            <span>Сайт Президента Российской Федерации</span>
-            <a href="http://kremlin.ru/" target="_blank">kremlin.ru</a>
-          </li>
-          <li class="page-footer__item">
-            <span>Сайт Правительства Российской Федерации</span>
-            <a href="http://government.ru/" target="_blank">government.ru</a>
-          </li>
-          <li class="page-footer__item">
-            <span>Государственная дума Российской Федерации</span>
-            <a href="http://duma.gov.ru/" target="_blank">duma.gov.ru</a>
-          </li>
-        </ul>
-        <ul class="page-footer__list">
-          <li class="page-footer__item">
-            <span>Портал государственных услуг</span>
-            <a href="http://gosuslugi.ru/" target="_blank">gosuslugi.ru</a>
-          </li>
-          <li class="page-footer__item">
-            <span>Единый портал раскрытия информации о подготовке проектов нормативных актов</span>
-            <a href="http://regulation.gov.ru/" target="_blank">regulation.gov.ru</a>
-          </li>
-          <li class="page-footer__item">
-            <span>Официальный интернет-портал правовой информации</span>
-            <a href="http://pravo.gov.ru/" target="_blank">pravo.gov.ru</a>
-          </li>
-        </ul>
-      </div>
-      <div class="page-footer__bottom">
-        <span>© 2019</span>
-      </div>
-    </div>
-  </footer>
-
-  <script src="js/libs.js"></script>
-  <script src="js/script.min.js"></script>
-</body>
-</html>
+  <include src="source/components/footer.html"></include>
