Добавляет шапку на страницу 404

--- a/source/composite-poll.html
+++ b/source/composite-poll.html
@@ -1,7 +1,7 @@
 <include src="source/components/head.html"></include>
 
-<body>
-  <header></header>
+<body class="page-body">
+  <include src="source/components/header.html"></include>
   <main class="page-composite-poll">
     <div class="container">
       <a href="main.html" class="arrow-backward">
