--- a/source/page-404.html
+++ b/source/page-404.html
@@ -1,29 +1,7 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="format-detection" content="telephone=no">
+<include src="source/components/head.html"></include>
 
-  <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
-  <link rel="manifest" href="favicon/site.webmanifest">
-  <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5">
-  <meta name="msapplication-TileColor" content="#da532c">
-  <meta name="theme-color" content="#ffffff">
-
-  <link rel="preload" href="fonts/Rubik-Light.woff2" as="font" crossorigin="anonymous">
-  <link rel="preload" href="fonts/Rubik-Regular.woff2" as="font" crossorigin="anonymous">
-  <link rel="preload" href="fonts/Rubik-Medium.woff2" as="font" crossorigin="anonymous">
-  <link rel="preload" href="fonts/Rubik-Bold.woff2" as="font" crossorigin="anonymous">
-  <link href="css/style.min.css" rel="stylesheet">
-  <title>Общественное голосование</title>
-</head>
-
-<body>
-  <header></header>
+<body class="page-body">
+  <include src="source/components/header.html"></include>
   <main>
     <section class="page-404">
       <div class="container">
