--- a/source/ui-kit.html
+++ b/source/ui-kit.html
@@ -93,7 +93,7 @@
           </select>
         </noscript>
         <a href="#" class="form-select__title">
-          Библиотеки
+          <span class="form-select__title-text">Библиотеки</span>
         </a>
         <div class="form-select__group">
           <div class="form-select__scrollbar-content">
