--- a/source/projects-winners.html
+++ b/source/projects-winners.html
@@ -1,116 +1,7 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <title>Общественное голосование</title>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="format-detection" content="telephone=no">
-
-  <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
-  <link rel="manifest" href="favicon/site.webmanifest">
-  <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5">
-  <meta name="msapplication-TileColor" content="#da532c">
-  <meta name="theme-color" content="#ffffff">
-
-  <link rel="preload" href="fonts/Rubik-Light.woff2" as="font" crossorigin="anonymous">
-  <link rel="preload" href="fonts/Rubik-Regular.woff2" as="font" crossorigin="anonymous">
-  <link rel="preload" href="fonts/Rubik-Medium.woff2" as="font" crossorigin="anonymous">
-  <link rel="preload" href="fonts/Rubik-Bold.woff2" as="font" crossorigin="anonymous">
-  <link href="css/style.min.css" rel="stylesheet">
-</head>
-</html>
+<include src="source/components/head.html"></include>
 
 <body class="page-body">
-  <header class="page-header">
-  <div class="page-header__bar">
-    <div class="page-header__container  container">
-      <a class="logo-link" href="#">
-        <img class="page-header__roi-logo" width="180" height="56" src="img/roi-logo.png" alt="Российская общественная инициатива">
-      </a>
-
-      <a class="page-header__link  page-header__site-name" href="#">Общественное голосование</a>
-
-      <a class="page-header__link  page-header__version-btn  page-header__version-btn--bar" href="#">
-        <svg width="18" height="18">
-          <use xlink:href="img/sprite.svg#icon-glasses"></use>
-        </svg>
-        Версия для слабовидящих
-      </a>
-
-      <button class="page-header__menu-btn  menu-btn" type="button">
-        <span class="visually-hidden">Открыть меню</span>
-        <span class="menu-btn__icon"></span>
-      </button>
-    </div>
-  </div>
-
-  <div class="page-header__main-menu  main-menu">
-    <div class="page-header__container  page-header__container--menu  main-menu__container  container">
-      <div class="page-header__location-switcher  location-switcher">
-        <p class="visually-hidden">Выберите регион голосования:</p>
-
-        <form action="#" method="post">
-          <div class="location-switcher__btn  form-radio">
-            <input id="location-residence" class="visually-hidden" type="radio" name="location" value="residence" checked="">
-            <label for="location-residence">Адрес проживания</label>
-            <span class="page-header__location-address  location-switcher__address">Городской округ рабочий поселок Новогуровский</span>
-          </div>
-
-          <div class="location-switcher__btn  form-radio">
-            <input id="location-registration" class="visually-hidden" type="radio" name="location" value="registration">
-            <label for="location-registration">Адрес регистрации</label>
-            <span class="page-header__location-address  location-switcher__address">Краснобродский городской округ</span>
-          </div>
-
-          <button class="location-switcher__show-btn  button  button--blue" type="submit">Показать</button>
-        </form>
-      </div>
-
-      <a class="page-header__link  page-header__version-btn  page-header__version-btn--menu" href="#">
-        <svg width="18" height="18">
-          <use xlink:href="img/sprite.svg#icon-glasses"></use>
-        </svg>
-        Версия для слабовидящих
-      </a>
-
-      <div class="page-header__user-menu  user-menu">
-        <div class="user-menu__overlay"></div>
-
-        <button class="user-menu__dropdown-btn" type="button">
-          <span class="visually-hidden">Открыть меню</span>
-
-          <svg class="user-menu__user-icon" width="16" height="16">
-            <use xlink:href="img/sprite.svg#icon-user"></use>
-          </svg>
-
-          <span class="user-menu__user-name">Анастасия</span>
-
-          <svg class="user-menu__dropdown-icon" width="13" height="13">
-            <use xlink:href="img/sprite.svg#icon-dropdown-arrow"></use>
-          </svg>
-        </button>
-
-        <ul class="user-menu__list">
-          <li class="user-menu__item">
-            <a class="page-header__link  user-menu__link" href="#">Избранное</a>
-          </li>
-
-          <li class="user-menu__item">
-            <a class="page-header__link  user-menu__link" href="#">Моя активность</a>
-          </li>
-
-          <li class="user-menu__item">
-            <a class="page-header__link  user-menu__link" href="#">Выход</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </div>
-</header>
-
+  <include src="source/components/header.html"></include>
 
   <main class="projects  page-content  page-content--with-back-btn">
     <div class="container">
@@ -178,17 +69,43 @@
                   <p class="form-select__option" data-value="Связь">Связь</p>
                   <p class="form-select__option" data-value="Спорт">Спорт</p>
                   <p class="form-select__option" data-value="Туризм">Туризм</p>
-                  <p class="form-select__option" data-value="Фельдшерско-акушерские пункты">Фельдшерско-акушерские пункты</p>
-                  <input type="hidden" name="project_select-active" id="project_select-active" value="Библиотеки">
+                  <p class="form-select__option" data-value="Фельдшерско-акушерские пункты" >Фельдшерско-акушерские пункты</p>
+                  <input type="hidden" name="project_select-active" id="project_select-active" value="Библиотеки"/>
                 </div>
               </div>
             </div>
           </div>
 
+          <div class="projects__vote-end  vote-end">
+            <div class="vote-end__text-group">
+              <svg width="24" height="19" viewBox="0 0 24 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M1.3125 9.2996L8.29209 16.2792L22.6875 1.88379" stroke-width="3"/>
+              </svg>
+
+              <p class="vote-end__text">Голосование завершено, победители указаны в&nbsp;соответствующих категориях</p>
+            </div>
+
+            <a class="vote-end__protocol" href="#">
+              <svg class="vote-end__protocol-icon" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M3 1h14v4h4v18H3V1zm16 1.41421L19.5858 3H19v-.58579z" fill="#fff" stroke="#9BD2F4" stroke-width="2"/>
+                <mask id="a" fill="#fff">
+                  <rect y="8" width="24" height="12" rx="1"/>
+                </mask>
+                <rect y="8" width="24" height="12" rx="1" fill="#fff" stroke="#9BD2F4" stroke-width="4" mask="url(#a)"/>
+                <path d="M4.48788 17c-.05334 0-.09867-.0187-.136-.056-.03734-.0373-.056-.0827-.056-.136V11.6c0-.0587.016-.1067.048-.144.03733-.0373.08533-.056.144-.056h1.952c1.568 0 2.368.7253 2.4 2.176.01066.3093.016.5173.016.624 0 .1013-.00534.3067-.016.616-.02134.7467-.22134 1.2987-.6 1.656-.37867.352-.96534.528-1.76.528h-1.992zm1.952-.92c.448 0 .77066-.0987.968-.296.19733-.2027.30133-.5333.312-.992.01066-.32.016-.52.016-.6 0-.0853-.00534-.2827-.016-.592-.01067-.4373-.12267-.76-.336-.968-.208-.208-.536-.312-.984-.312h-.992v3.76h1.032zm5.63302 1c-.7254 0-1.2907-.184-1.696-.552-.40536-.368-.61869-.9147-.64002-1.64-.00534-.1547-.008-.3813-.008-.68 0-.304.00266-.5333.008-.688.02133-.7093.24-1.2533.65602-1.632.416-.3787.976-.568 1.68-.568s1.264.1893 1.68.568c.4213.3787.6426.9227.664 1.632.0106.3093.016.5387.016.688 0 .144-.0054.3707-.016.68-.0267.7253-.2427 1.272-.648 1.64-.4054.368-.9707.552-1.696.552zm0-.92c.3573 0 .6426-.1067.856-.32.2133-.2187.328-.5493.344-.992.0106-.32.016-.536.016-.648 0-.1227-.0054-.3387-.016-.648-.016-.4427-.1307-.7707-.344-.984-.2134-.2187-.4987-.328-.856-.328-.352 0-.6347.1093-.848.328-.2134.2133-.328.5413-.344.984-.0054.1547-.008.3707-.008.648 0 .272.0026.488.008.648.016.4427.128.7733.336.992.2133.2133.4986.32.856.32zm5.5705.92c-.736 0-1.3067-.1893-1.712-.568-.4-.3787-.6134-.912-.64-1.6-.0054-.144-.008-.3787-.008-.704 0-.3307.0026-.5707.008-.72.0266-.6827.2426-1.2133.648-1.592.4106-.384.9786-.576 1.704-.576.4746 0 .888.0827 1.24.248.352.16.624.3813.816.664.192.2773.2933.592.304.944v.016c0 .0427-.0187.08-.056.112-.032.0267-.0694.04-.112.04h-.76c-.064 0-.112-.0133-.144-.04-.032-.0267-.0587-.0773-.08-.152-.0854-.336-.2267-.5707-.424-.704-.1974-.1387-.4614-.208-.792-.208-.768 0-1.168.4293-1.2 1.288-.0054.144-.008.3653-.008.664s.0026.5253.008.68c.032.8587.432 1.288 1.2 1.288.3306 0 .5946-.0693.792-.208.2026-.1387.344-.3733.424-.704.016-.0747.04-.1253.072-.152.0373-.0267.088-.04.152-.04h.76c.048 0 .088.016.12.048.0373.032.0533.072.048.12-.0107.352-.112.6693-.304.952-.192.2773-.464.4987-.816.664-.352.16-.7654.24-1.24.24z" fill="#2C8ECC"/>
+              </svg>
+
+              <span class="vote-end__protocol-text">
+                Протокол
+                <span class="vote-end__protocol-size">3,2 мб</span>
+              </span>
+            </a>
+          </div>
+
           <button class="filter__open-btn  button  button--light-blue" type="button">Фильтры</button>
 
           <div class="filter__body">
-            <div class="projects__counter  counter">
+            <div class="projects__counter  counter  counter--hidden">
               <div class="counter__container">
                 <p class="counter__caption">Вы&nbsp;можете проголосовать:</p>
 
@@ -211,7 +128,7 @@
             <div class="projects__filter-main  filter__main">
               <div class="filter__main-container">
                 <div class="filter__item  form-radio">
-                  <input class="visually-hidden" type="radio" name="filter-location" id="filter-location-regional" value="filter-location-regional" checked="">
+                  <input class="visually-hidden" type="radio" name="filter-location" id="filter-location-regional" value="filter-location-regional" checked>
                   <label for="filter-location-regional">Региональные</label>
                 </div>
 
@@ -236,7 +153,7 @@
                       <p class="form-select__option form-select__option--active" data-value="За">За</p>
                       <p class="form-select__option" data-value="Против">Против</p>
                       <p class="form-select__option" data-value="Не голосовал">Не голосовал</p>
-                      <input type="hidden" name="project_select-active" id="project_select-active" value="Голосовал">
+                      <input type="hidden" name="project_select-active" id="project_select-active" value="Голосовал"/>
                     </div>
                   </div>
                 </div>
@@ -254,7 +171,7 @@
       </div>
 
       <div class="projects__list">
-        <article class="project-item">
+        <article class="project-item  project-item--win">
           <a class="project-item__link" href="#">
             <h2 class="project-item__title">Обязать контролеров проверять как пассажиров так и перевозчиков</h2>
 
@@ -274,7 +191,7 @@
           </a>
         </article>
 
-        <article class="project-item  project-item--voted">
+        <article class="project-item  project-item--win">
           <a class="project-item__link" href="#">
             <h2 class="project-item__title">Онлайн-голосование граждан за принятие законов Российской Федерации</h2>
 
@@ -294,7 +211,7 @@
           </a>
         </article>
 
-        <article class="project-item  project-item--against">
+        <article class="project-item  project-item--win">
           <a class="project-item__link" href="#">
             <h2 class="project-item__title">Инициатива "За строительство подземного метро в районе Северный (г. Москва) и социальной инфраструктуры</h2>
 
@@ -314,7 +231,7 @@
           </a>
         </article>
 
-        <article class="project-item  project-item--disabled">
+        <article class="project-item  project-item--win">
           <a class="project-item__link" href="#">
             <h2 class="project-item__title">Возрождение вечерних школ</h2>
 
@@ -374,7 +291,7 @@
           </a>
         </article>
 
-        <article class="project-item  project-item--voted">
+        <article class="project-item">
           <a class="project-item__link" href="#">
             <h2 class="project-item__title">Онлайн-голосование граждан за принятие законов Российской Федерации</h2>
 
@@ -394,7 +311,7 @@
           </a>
         </article>
 
-        <article class="project-item  project-item--against">
+        <article class="project-item">
           <a class="project-item__link" href="#">
             <h2 class="project-item__title">Инициатива "За строительство подземного метро в районе Северный (г. Москва) и социальной инфраструктуры</h2>
 
@@ -414,7 +331,7 @@
           </a>
         </article>
 
-        <article class="project-item  project-item--disabled">
+        <article class="project-item">
           <a class="project-item__link" href="#">
             <h2 class="project-item__title">Возрождение вечерних школ</h2>
 
@@ -474,7 +391,7 @@
           </a>
         </article>
 
-        <article class="project-item  project-item--voted">
+        <article class="project-item">
           <a class="project-item__link" href="#">
             <h2 class="project-item__title">Онлайн-голосование граждан за принятие законов Российской Федерации</h2>
 
@@ -494,7 +411,7 @@
           </a>
         </article>
 
-        <article class="project-item  project-item--against">
+        <article class="project-item">
           <a class="project-item__link" href="#">
             <h2 class="project-item__title">Инициатива "За строительство подземного метро в районе Северный (г. Москва) и социальной инфраструктуры</h2>
 
@@ -514,7 +431,7 @@
           </a>
         </article>
 
-        <article class="project-item  project-item--disabled">
+        <article class="project-item">
           <a class="project-item__link" href="#">
             <h2 class="project-item__title">Возрождение вечерних школ</h2>
 
@@ -589,48 +506,6 @@
     </div>
   </main>
 
-  <footer class="page-footer">
-    <div class="container">
-      <div class="page-footer__top">
-        <ul class="page-footer__list">
-          <li class="page-footer__item">
-            <span>Сайт Президента Российской Федерации</span>
-            <a href="http://kremlin.ru/" target="_blank">kremlin.ru</a>
-          </li>
-          <li class="page-footer__item">
-            <span>Сайт Правительства Российской Федерации</span>
-            <a href="http://government.ru/" target="_blank">government.ru</a>
-          </li>
-          <li class="page-footer__item">
-            <span>Государственная дума Российской Федерации</span>
-            <a href="http://duma.gov.ru/" target="_blank">duma.gov.ru</a>
-          </li>
-        </ul>
-        <ul class="page-footer__list">
-          <li class="page-footer__item">
-            <span>Портал государственных услуг</span>
-            <a href="http://gosuslugi.ru/" target="_blank">gosuslugi.ru</a>
-          </li>
-          <li class="page-footer__item">
-            <span>Единый портал раскрытия информации о подготовке проектов нормативных актов</span>
-            <a href="http://regulation.gov.ru/" target="_blank">regulation.gov.ru</a>
-          </li>
-          <li class="page-footer__item">
-            <span>Официальный интернет-портал правовой информации</span>
-            <a href="http://pravo.gov.ru/" target="_blank">pravo.gov.ru</a>
-          </li>
-        </ul>
-      </div>
-      <div class="page-footer__bottom">
-        <span>© 2019</span>
-      </div>
-    </div>
-  </footer>
-
-<script src="js/libs.js"></script>
-<script src="js/main.min.js"></script>
-
-
-
+  <include src="source/components/footer.html"></include>
 </body>
-
+</html>
