Добавляет составной опрос - результат

--- a/source/index.html
+++ b/source/index.html
@@ -1,15 +1,15 @@
 <include src="source/components/head.html"></include>
 <body>
-
-  <div class="container">
-    <h1>Список страниц</h1>
-    <ul>
-      <li>
-        <a href="ui-kit.html" target="_blank">UI kit</a>
-      </li>
-      <li>
-        <a href="main-page.html" target="_blank">Main page</a>
-      </li>
+  <main>
+    <div class="container">
+      <h1>Список страниц</h1>
+      <ul>
+        <li>
+          <a href="ui-kit.html" target="_blank">UI kit</a>
+        </li>
+        <li>
+          <a href="main-page.html" target="_blank">Main page</a>
+        </li>
         <li>
           <a href="main.html" target="_blank">Главная</a>
         </li>
@@ -18,6 +18,12 @@
         </li>
         <li>
           <a href="composite-poll.html" target="_blank">Составной опрос</a>
+        </li>
+        <li>
+          <a href="composite-poll-process.html" target="_blank">Составной опрос - ждём результат</a>
+        </li>
+        <li>
+          <a href="composite-poll-result.html" target="_blank">Составной опрос - результат</a>
         </li>
       </ul>
     </div>
