--- a/source/page-404.html
+++ b/source/page-404.html
@@ -16,3 +16,7 @@
   </main>
 
   <include src="source/components/footer.html"></include>
+  <script src="js/libs.js"></script>
+  <script src="js/main.min.js"></script>
+</body>
+</html>
