--- a/source/composite-poll.html
+++ b/source/composite-poll.html
@@ -2,6 +2,7 @@
 
 <body class="page-body">
   <include src="source/components/header.html"></include>
+
   <main class="page-composite-poll">
     <div class="container">
       <a href="main.html" class="arrow-backward">
@@ -198,3 +199,9 @@
   </main>
 
   <include src="source/components/footer.html"></include>
+
+  <script src="js/libs.js"></script>
+  <script src="js/main.min.js"></script>
+</body>
+</html>
+
