--- a/source/ui-kit.html
+++ b/source/ui-kit.html
@@ -1,6 +1,6 @@
 <include src="source/components/head.html"></include>
 
-<body>
+<body class="page-body">
   <div class="container">
     <h1>UI kit</h1>
     <h2>Кнопки</h2>
@@ -144,3 +144,9 @@
       </a>
     </div>
   </div>
+
+  <include src="source/components/footer.html"></include>
+  <script src="js/libs.js"></script>
+  <script src="js/main.min.js"></script>
+</body>
+</html>
