Добавляет вариант "проголосовать против всех" стр проектов

--- a/source/projects-against.html
+++ b/source/projects-against.html
@@ -165,7 +165,7 @@
           </a>
         </article>
 
-        <article class="project-item  project-item--voted">
+        <article class="project-item">
           <a class="project-item__link" href="#">
             <h2 class="project-item__title">Онлайн-голосование граждан за принятие законов Российской Федерации</h2>
 
@@ -185,7 +185,7 @@
           </a>
         </article>
 
-        <article class="project-item  project-item--against">
+        <article class="project-item">
           <a class="project-item__link" href="#">
             <h2 class="project-item__title">Инициатива "За строительство подземного метро в районе Северный (г. Москва) и социальной инфраструктуры</h2>
 
@@ -265,7 +265,7 @@
           </a>
         </article>
 
-        <article class="project-item  project-item--voted">
+        <article class="project-item">
           <a class="project-item__link" href="#">
             <h2 class="project-item__title">Онлайн-голосование граждан за принятие законов Российской Федерации</h2>
 
@@ -285,7 +285,7 @@
           </a>
         </article>
 
-        <article class="project-item  project-item--against">
+        <article class="project-item">
           <a class="project-item__link" href="#">
             <h2 class="project-item__title">Инициатива "За строительство подземного метро в районе Северный (г. Москва) и социальной инфраструктуры</h2>
 
@@ -365,7 +365,7 @@
           </a>
         </article>
 
-        <article class="project-item  project-item--voted">
+        <article class="project-item">
           <a class="project-item__link" href="#">
             <h2 class="project-item__title">Онлайн-голосование граждан за принятие законов Российской Федерации</h2>
 
@@ -385,7 +385,7 @@
           </a>
         </article>
 
-        <article class="project-item  project-item--against">
+        <article class="project-item">
           <a class="project-item__link" href="#">
             <h2 class="project-item__title">Инициатива "За строительство подземного метро в районе Северный (г. Москва) и социальной инфраструктуры</h2>
 
@@ -445,7 +445,7 @@
           </a>
         </article>
       </div>
-      <button class="projects__list-btn  button  button--light-blue" type="button">Показать ещё</button>
+      <button class="projects__list-btn  button  button--grey" type="button">Проголосовать против всех</button>
 
       <div class="projects__paginator  paginator">
         <a class="paginator__item paginator__item--prev paginator__item--disabled" aria-label="предыдущий">
