--- a/source/projects-against.html
+++ b/source/projects-against.html
@@ -44,9 +44,11 @@
                   <option value="Фельдшерско-акушерские пункты">Фельдшерско-акушерские пункты</option>
                 </select>
               </noscript>
-              <a href="#" class="form-select__title">
-                <span class="form-select__title-text">Библиотеки</span>
-              </a>
+              <div class="form-select__title-wrapper">
+                <a class="form-select__title" href="#">
+                  <span class="form-select__title-text">Библиотеки</span>
+                </a>
+              </div>
               <div class="form-select__group">
                 <div class="form-select__scrollbar-content">
                   <p class="form-select__option form-select__option--active" data-value="Библиотеки">Библиотеки</p>
@@ -119,9 +121,11 @@
                       <option value="Не голосовал">Не голосовал</option>
                     </select>
                   </noscript>
-                  <a href="#" class="form-select__title">
-                    <span class="form-select__title-text">Голосовал</span>
-                  </a>
+                  <div class="form-select__title-wrapper">
+                    <a href="#" class="form-select__title">
+                      <span class="form-select__title-text">Голосовал</span>
+                    </a>
+                  </div>
                   <div class="form-select__group">
                     <div class="form-select__scrollbar-content">
                       <p class="form-select__option form-select__option--active" data-value="За">За</p>
