Исправляет подключение компонентов и структуру страниц

--- a/source/composite-poll-process.html
+++ b/source/composite-poll-process.html
@@ -1,29 +1,36 @@
-<include src="source/components/head.html"></include>
+<!DOCTYPE html>
+<html lang="ru">
+  <include src="source/components/head.html"></include>
 
-<body class="page-body">
-  <include src="source/components/header.html"></include>
+  <body class="page-body">
+    <include src="source/components/header.html"></include>
 
-  <main class="page-composite-poll">
-    <div class="container">
-      <a href="main.html" class="arrow-backward">
-        <svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <use xlink:href="img/sprite.svg#icon-arrow-big"></use>
-        </svg>
-        <span>Назад</span>
-      </a>
-    </div>
-    <section class="composite-poll">
+    <main class="page-composite-poll">
       <div class="container">
-        <h1 class="composite-poll__title page-title">Опрос о состоянии инвестиционного и&nbsp;предпринимательского климата в Тульской области для&nbsp;представителей средних предприятий</h1>
-        <p class="composite-poll__date">
-          Дата окончания опроса: <b>25.11.2019</b>
-        </p>
-        <div class="poll-process composite-poll__process">
-          <p>Результаты опроса будут опубликованы после 25.11.2019</p>
-        </div>
-        <p class="composite-poll__description composite-poll__description--process">Здесь будет описание опроса (информация из стандартного поля). Рыбным текстом называется текст для временного наполнения макета в&nbsp;публикациях или производстве веб-сайтов, пока финальный текст еще не создан. Рыбный текст известен как текст-заполнитель.</p>
+        <a href="main.html" class="arrow-backward">
+          <svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <use xlink:href="img/sprite.svg#icon-arrow-big"></use>
+          </svg>
+          <span>Назад</span>
+        </a>
       </div>
-    </section>
-  </main>
+      <section class="composite-poll">
+        <div class="container">
+          <h1 class="composite-poll__title page-title">Опрос о состоянии инвестиционного и&nbsp;предпринимательского климата в Тульской области для&nbsp;представителей средних предприятий</h1>
+          <p class="composite-poll__date">
+            Дата окончания опроса: <b>25.11.2019</b>
+          </p>
+          <div class="poll-process composite-poll__process">
+            <p>Результаты опроса будут опубликованы после 25.11.2019</p>
+          </div>
+          <p class="composite-poll__description composite-poll__description--process">Здесь будет описание опроса (информация из стандартного поля). Рыбным текстом называется текст для временного наполнения макета в&nbsp;публикациях или производстве веб-сайтов, пока финальный текст еще не создан. Рыбный текст известен как текст-заполнитель.</p>
+        </div>
+      </section>
+    </main>
 
-  <include src="source/components/footer.html"></include>
+    <include src="source/components/footer.html"></include>
+
+    <script src="js/libs.js"></script>
+    <script src="js/main.min.js"></script>
+  </body>
+</html>
