Добавляет страницу новости и уведомления

--- a/source/composite-poll.html
+++ b/source/composite-poll.html
@@ -5,7 +5,7 @@
   <body class="page-body">
     <include src="source/components/header.html"></include>
 
-    <main class="page-composite-poll">
+    <main>
       <div class="container">
         <a href="main.html" class="arrow-backward">
             <svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg">
